--- a/src/components/LoadingSplash.module.css
+++ b/src/components/LoadingSplash.module.css
@@ -6,9 +6,25 @@
   align-items: center;
   justify-content: center;
   z-index: 9999;
+  overflow: hidden;
+}
+
+.backgroundImage {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  opacity: 0.4;
+  z-index: 0;
 }
 
 .content {
+  position: relative;
+  z-index: 1;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -16,7 +32,7 @@
 }
 
 .loadingGif {
-  max-width: 300px;
+  max-width: 150px;
   height: auto;
 }
 
